# Augmented-Reality

./: index.html  main.py  pyproject.toml  test.html
archive/: app.py  ar_opencv.ipynb  ar_opencv.py
archive/templates/: ar_scene.html
data/: hiro.patt
image-tracking/: example.html  index.html  posterB.mind  posterPattern.patt
