[project]
name = "augmentweb"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.1",
    "matplotlib>=3.10.5",
    "nbconvert>=7.16.6",
    "nbformat>=5.10.4",
    "numpy>=2.3.2",
    "opencv-python>=4.11.0.86",
    "pillow>=11.3.0",
    "qrcode>=8.2",
]
